# RustPluginSync

./: Install.ps1  README.md  Start.bat  Start.ps1  pyproject.toml
docs/: TECH_SPEC.md
scripts/: bootstrap.bat  bootstrap.ps1  run-service.bat  setup-ssh.bat  setup-ssh.ps1
src/rust_sync/: __main__.py  service.py  webapp.py
src/rust_sync/web/static/: app.js  index.html  styles.css
